--- a/resources/assets/scss/utilities/_colors.scss
+++ b/resources/assets/scss/utilities/_colors.scss
@@ -1,19 +1,17 @@
-$color-red:#cb0000;
-$color-red2:#da4c4c;
-$color-darkred:#8e0000;
-$color-dark:#4d4d4d;
+// $color-red:#ab1a2d;
+$color-red:#ab1a2d;
+$color-darkred:#841523;
+$color-dark:#303132;
 $color-navydark:#252a38;
 $color-darknavy:#1b1e25;
 $color-navy:#2a3040;
-$color-lightgray:#a5a8b2;
+$color-lightgray:#ddd;
 $color-lightgray2:#f0f0f0;
-
 // BASIC
 $color-white:#fff;
 $color-black:#000;
-$color-gray:#6d747a;
+$color-gray:#b9b1b2;
 $color-gray2:#676767;
-
 $color-primary:$color-dark;
 $color-secondary:$color-red;
-$color-third:$color-navy;
+$color-third:$color-black;
