--- a/resources/assets/scss/components/_button.scss
+++ b/resources/assets/scss/components/_button.scss
@@ -1,59 +1,49 @@
-$btn-color: #ab1a2d;
-
+// $btn-color: #ab1a2d;
 .btn {
-
     &--primary {
         background: transparent;
         padding: 11px 46px;
         min-width: 200px;
         font-weight: 900;
         font-size: 18px;
-        color: $btn-color;
-        border: 1px solid $btn-color;
+        color: $color-secondary;
+        border: 1px solid $color-secondary;
         @include border-radius(100px);
         @include transition(.3);
-
-        @media only screen and (max-width:$mobile) {
+        @media only screen and (max-width: $mobile) {
             padding: 10px 30px;
             font-size: .9em;
             width: 90%;
             display: block;
             margin: auto;
         }
-
         &:hover {
             color: $color-white;
             // background: $color-darkred;
-            background: $btn-color;
+            background: $color-darkred;
         }
     }
-
     &--secondary {
-        background: $btn-color;
+        background: $color-secondary;
         padding: 11px 46px;
         min-width: 200px;
         font-weight: 900;
         font-size: 18px;
         color: $color-white;
-        border: 1px solid $btn-color;
+        border: 1px solid $color-secondary;
         @include border-radius(100px);
         @include transition(.3);
-
-        @media only screen and (max-width:$mobile) {
+        @media only screen and (max-width: $mobile) {
             padding: 10px 30px;
             font-size: .9em;
             width: 90%;
             display: block;
             margin: auto;
         }
-
         &:hover {
-            color: $btn-color;
+            color: $color-darkred;
             // background: $color-darkred;
             background: transparent;
         }
     }
-
-
-
 }
