--- a/resources/assets/scss/components/_footer.scss
+++ b/resources/assets/scss/components/_footer.scss
@@ -1,5 +1,5 @@
-$site-red: #ab1a2d;
-$site-dred: #841523;
+// $site-red: #ab1a2d;
+// $site-dred: #841523;
 .footer {
     &__wrapper {
         position: relative;
@@ -40,6 +40,8 @@ $site-dred: #841523;
                     display: inline-block;
                     vertical-align: middle;
                     max-width: 250px;
+                    font-size: .9em;
+                    font-weight: 500;
                 }
                 i {
                     &.loc {
@@ -86,6 +88,8 @@ $site-dred: #841523;
                     text-decoration: none;
                     color: $color-black;
                     font: 300 19px $font-primary;
+                    font-weight: 500;
+                    font-size: 1em;
                 }
             }
         }
@@ -125,13 +129,14 @@ $site-dred: #841523;
         height: 100%;
         padding: 30px 0;
         margin-top: 30px;
-        background: $site-red;
+        background: $color-secondary;
         .copyright-txt {
             position: relative;
-            color: #b9b1b2;
+            color: $color-gray;
             font: 400 16px $font-primary;
             a {
-                color: #b9b1b2;
+                color: $color-gray;
+                text-decoration: none;
             }
         }
     }
@@ -159,14 +164,14 @@ $site-dred: #841523;
     padding: 6px 15px;
     font-size: 20px;
     text-align: center;
-    color: #ffffff;
+    color: $color-white;
     background-color: #777;
     opacity: 0.25;
     filter: alpha(opacity=25);
 }
 
 #to-top:hover {
-    color: #ffffff;
+    color: $color-white;
     text-decoration: none;
     opacity: 1;
     filter: alpha(opacity=100);
