--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -948,3 +948,80 @@
     .executive-board {
         padding: 60px 0;
     }
+    
+    .board-detail-content {
+        margin: 75px 0;
+        .container-max {
+            max-width: 65%;
+        }
+        &__message {
+            font-size: 1.3em;
+            font-weight: bold;
+            margin-bottom: 30px;
+        }
+        &__content {
+            font-size: .9em;
+            line-height: 24px;
+            font-weight: 600;
+            text-align: justify;
+            border-bottom: 1px solid #ddd;
+            padding-bottom: 50px;
+        }
+    }
+    
+    .next-board {
+        margin-bottom: 100px;
+        &__item {
+            @include flex;
+            @include flex-align-items(center);
+            &:after {
+                display: block;
+                clear: both;
+                content: '';
+            }
+            a {
+                color: $color-black;
+                text-decoration: none;
+                text-transform: uppercase;
+                font-size: .9em;
+                color: $color-secondary;
+                font-weight: 500;
+                h3 {
+                    text-transform: uppercase;
+                    font-size: 1.5em;
+                    font-weight: bold;
+                    color: $color-black;
+                }
+            }
+        }
+        &__image {
+            width: 150px;
+            height: 150px;
+            border-radius: 100%;
+            overflow: hidden;
+        }
+        &__left {
+            .next-board__content {
+                margin-left: 10px;
+                text-align: left;
+                i {
+                    margin-right: 5px;
+                }
+            }
+            .next-board__item {
+                float: left;
+            }
+        }
+        &__right {
+            .next-board__content {
+                margin-right: 10px;
+                text-align: right;
+                i {
+                    margin-left: 5px;
+                }
+            }
+            .next-board__item {
+                float: right;
+            }
+        }
+    }
