--- a/resources/assets/scss/components/_subpages.scss
+++ b/resources/assets/scss/components/_subpages.scss
@@ -18,5 +18,10 @@ section {
                 right: 10%;
             }
         }
+        header {
+            border-bottom: 1px solid #f4f4f4;
+            -webkit-box-shadow: 0 1px 5px 1px rgba(0, 0, 0, .1);
+            box-shadow: 0 1px 5px 1px rgba(0, 0, 0, .1);
+        }
     }
 }
