--- a/resources/assets/scss/pages/_contact-us.scss
+++ b/resources/assets/scss/pages/_contact-us.scss
@@ -1,11 +1,3 @@
 .page {
-
-    &--contact-us {
-
-
-        .contact-section {
-            color: #f00;
-        }
-
-    }
+    &--contact-us {}
 }
