--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18803,54 +18803,130 @@ header .contact-details-wrap .info a i.ic-user {
   width: calc(100%/2);
 }
 
-.contact-form {
-  padding: 50px 35px;
-  box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.3);
-  border-radius: 10px;
-  -moz-border-radius: 10px;
-}
-.contact-form .row div {
-  padding: 0;
-}
-.contact-form ul {
+.contact-form div {
   margin: 0;
   padding: 0;
 }
-.contact-form ul.form-box li {
+.contact-form div.form-box .form-control {
+  height: auto;
+}
+.contact-form div.form-box .form-group {
+  padding: 0;
+  margin-bottom: 5px;
+}
+.contact-form div.form-box .form-group:nth-child(2) {
+  padding-left: 10px;
+}
+.contact-form div.form-box .form-group:first-child {
+  padding-right: 10px;
+}
+.contact-form div.form-box .form-group label {
+  background: #ab1a2d;
+  padding: 0 10px;
+  font-size: 11px !important;
+  color: #fff !important;
+  left: 0;
+  bottom: -4px;
+  margin-bottom: 0px;
+  position: relative;
+  outline: none;
+  opacity: 0;
+  visibility: hidden;
+}
+.contact-form div.form-box .form-group .g-recaptcha {
+  display: block;
+  margin-top: 35px;
+}
+.contact-form div.form-box .form-group.active {
+  position: relative;
+}
+.contact-form div.form-box .form-group.active label {
+  background: #ab1a2d;
+  padding: 0 10px;
+  font-size: 11px !important;
+  color: #fff !important;
+  left: 0;
+  bottom: -4px;
+  margin-bottom: 0px;
+  position: relative;
+  outline: none;
+  opacity: 1;
+  visibility: visible;
+}
+.contact-form div.form-box .form-group.active input,
+.contact-form div.form-box .form-group.active textarea {
+  animation: motion-background 1s infinite;
+  -webkit-animation: motion-background 1s infinite;
+  -moz-animation: motion-background 1s infinite;
+  color: #ab1a2d;
+  font-weight: bold;
+  padding-left: 10px;
+  border: 2px solid #ab1a2d;
+  outline: none;
+}
+.contact-form div.form-box .form-group .help-block {
+  position: absolute;
+  font-size: 0.6em;
+  color: #ab1a2d;
+  display: block;
+  /* width: 100%; */
+}
+.contact-form div.form-box .form-group .g-recaptcha {
+  max-width: 305px;
+  margin: auto !important;
+  margin-top: 30px !important;
+  margin-bottom: 30px !important;
+}
+.contact-form div.form-box .form-group input {
+  display: block;
+  width: 100%;
+  padding: 11px;
+  border-radius: 100px;
+  -moz-border-radius: 100px;
+  padding-left: 20px;
+}
+.contact-form div.form-box .form-group textarea {
+  height: 185px;
+  border-radius: 20px;
+  -moz-border-radius: 20px;
+  padding-left: 20px;
+  padding-top: 15px;
+}
+.contact-form div.form-box li {
   display: block;
   position: relative;
   margin-bottom: 20px;
 }
-.contact-form ul.form-box li:first-child {
+.contact-form div.form-box li:first-child {
   padding-right: 10px;
 }
-.contact-form ul.form-box li:nth-child(2) {
+.contact-form div.form-box li:nth-child(2) {
   padding-left: 10px;
 }
-.contact-form ul.form-box li .container {
+.contact-form div.form-box li .container {
   padding: 0;
 }
-.contact-form ul.form-box li .container div {
+.contact-form div.form-box li .container div {
   padding: 0;
 }
-.contact-form ul.form-box li input,
-.contact-form ul.form-box li textarea {
+.contact-form div.form-box li input,
+.contact-form div.form-box li textarea {
   display: block;
   width: 100%;
   padding: 11px;
   background: transparent;
 }
-.contact-form ul.form-box li input,
-.contact-form ul.form-box li textarea {
+.contact-form div.form-box li input,
+.contact-form div.form-box li textarea {
   padding-left: 105px;
   transition: all 0.3s ease;
   outline: none !important;
 }
-.contact-form ul.form-box li textarea {
+.contact-form div.form-box li textarea {
   min-height: 100px;
   max-height: 250px;
 }
-.contact-form ul.form-box li label {
+.contact-form div.form-box li label {
   position: absolute;
   left: 25px;
   height: 18px;
@@ -18864,10 +18940,10 @@ header .contact-details-wrap .info a i.ic-user {
   font-size: 0.9em;
   font-weight: 800;
 }
-.contact-form ul.form-box li textarea {
+.contact-form div.form-box li textarea {
   height: 150px;
 }
-.contact-form ul.form-box li span {
+.contact-form div.form-box li span {
   padding: 2px 5px;
   display: block;
   font-size: 12px;
@@ -18875,15 +18951,15 @@ header .contact-details-wrap .info a i.ic-user {
   margin-top: 5px;
   background: #ab1a2d;
 }
-.contact-form ul.form-box li button:hover {
+.contact-form div.form-box li button:hover {
   background: #ab1a2d !important;
   border: 1px solid transparent;
   color: #fff;
 }
-.contact-form ul.form-box li.padding-left-more input {
+.contact-form div.form-box li.padding-left-more input {
   padding-left: 200px !important;
 }
-.contact-form ul.form-box li:after {
+.contact-form div.form-box li:after {
   display: block;
   clear: both;
   content: "";
@@ -18909,203 +18985,6 @@ header .contact-details-wrap .info a i.ic-user {
   100% {
     background: transparent;
   }
-}
-.contact-form ul.form-box li.active label {
-  position: absolute;
-  background: #ab1a2d;
-  padding: 0 10px;
-  font-size: 11px !important;
-  color: #fff !important;
-  left: 15px;
-  top: -10px;
-}
-.contact-form ul.form-box li.active input,
-.contact-form ul.form-box li.active textarea {
-  animation: motion-background 1s infinite;
-  -webkit-animation: motion-background 1s infinite;
-  -moz-animation: motion-background 1s infinite;
-  color: #ab1a2d;
-  font-weight: bold;
-  padding-left: 10px;
-  border: 2px solid #ab1a2d;
-  outline: none;
-}
-
-.product-search-form .row div {
-  padding: 0;
-}
-.product-search-form ul {
-  margin: 0;
-  padding: 0;
-}
-.product-search-form ul.form-box li {
-  display: block;
-  position: relative;
-  margin-bottom: 20px;
-}
-.product-search-form ul.form-box li:first-child {
-  padding-right: 10px;
-}
-.product-search-form ul.form-box li:nth-child(2) {
-  padding-left: 10px;
-}
-.product-search-form ul.form-box li .container {
-  padding: 0;
-}
-.product-search-form ul.form-box li .container div {
-  padding: 0;
-}
-.product-search-form ul.form-box li input,
-.product-search-form ul.form-box li select {
-  display: block;
-  width: 100%;
-  background: transparent;
-  border: 2px solid #676767;
-  transition: all 0.3s ease;
-  outline: none !important;
-}
-.product-search-form ul.form-box li input:active, .product-search-form ul.form-box li input:focus,
-.product-search-form ul.form-box li select:active,
-.product-search-form ul.form-box li select:focus {
-  outline: none !important;
-}
-.product-search-form ul.form-box li input {
-  padding-left: 225px;
-}
-@media only screen and (max-width: 480px) {
-  .product-search-form ul.form-box li input {
-    font-size: 11px;
-  }
-}
-@media only screen and (max-width: 480px) {
-  .product-search-form ul.form-box li select {
-    font-size: 11px;
-  }
-}
-.product-search-form ul.form-box li label {
-  position: absolute;
-  left: 25px;
-  height: 18px;
-  top: 10px;
-  margin: auto;
-  text-transform: capitalize;
-  color: #ab1a2d;
-  font-size: 12px;
-  transition: all 0.3s ease;
-  font-weight: 500;
-  font-size: 0.9em;
-  font-weight: 800;
-}
-@media only screen and (max-width: 480px) {
-  .product-search-form ul.form-box li label {
-    font-size: 11px;
-  }
-}
-.product-search-form ul.form-box li span {
-  padding: 2px 5px;
-  display: block;
-  font-size: 12px;
-  color: #fff;
-  margin-top: 5px;
-  background: #ab1a2d;
-}
-.product-search-form ul.form-box li button:hover {
-  background: #ab1a2d !important;
-  border: 1px solid transparent;
-  color: #fff;
-}
-.product-search-form ul.form-box li.padding-left-more input {
-  padding-left: 200px !important;
-}
-.product-search-form ul.form-box li:after {
-  display: block;
-  clear: both;
-  content: "";
-}
-@keyframes motion-background {
-  0% {
-    background: transparent;
-  }
-  50% {
-    background: #fff;
-  }
-  100% {
-    background: transparent;
-  }
-}
-@-webkit-keyframes motion-background {
-  0% {
-    background: transparent;
-  }
-  50% {
-    background: #fff;
-  }
-  100% {
-    background: transparent;
-  }
-}
-.product-search-form ul.form-box li.active label {
-  position: absolute;
-  background: #ab1a2d;
-  padding: 0 10px;
-  font-size: 11px !important;
-  color: #fff !important;
-  left: 15px;
-  top: -10px;
-}
-.product-search-form ul.form-box li.active input,
-.product-search-form ul.form-box li.active select {
-  animation: motion-background 1s infinite;
-  -webkit-animation: motion-background 1s infinite;
-  -moz-animation: motion-background 1s infinite;
-  color: #ab1a2d;
-  font-weight: bold;
-  padding-left: 10px;
-  border: 2px solid #ab1a2d;
-  outline: none;
-}
-.product-search-form__item {
-  position: relative;
-}
-.product-search-form__item ul.form-box li input,
-.product-search-form__item ul.form-box li select {
-  border: 2px solid transparent !important;
-}
-.product-search-form__item--border {
-  padding-left: 95px;
-}
-.product-search-form__item--border input,
-.product-search-form__item--border select {
-  border: 2px solid transparent !important;
-}
-.product-search-form__item--border:after {
-  position: absolute;
-  width: 95%;
-  height: 2px;
-  background: #ab1a2d;
-  bottom: 0%;
-  left: 0;
-  right: 0;
-  margin: auto;
-  content: "";
-}
-
-.search-function {
-  background: #f0f0f0;
-  padding: 23px;
-  margin-bottom: 50px;
-}
-.search-function .btn--submit {
-  width: 100%;
-}
-.search-function .btn--submit:hover {
-  opacity: 0.6;
-}
-.search-function .form-box li {
-  margin: 0 !important;
-}
-.search-function .form-box li input, .search-function .form-box li select {
-  border: 2px solid transparent !important;
 }
 
 /* MOBILE HEADER */
@@ -20471,6 +20350,134 @@ ul.bullet-style li strong {
   float: right;
 }
 
+.contact-details {
+  display: block;
+}
+.contact-details__item {
+  position: relative;
+  display: block;
+  color: #000;
+  font: 300 18px "Open Sans", sans-serif;
+  margin-bottom: 6px;
+  margin-bottom: 18px;
+}
+.contact-details__item a {
+  color: #000;
+}
+.contact-details__item a,
+.contact-details__item span {
+  display: inline-block;
+  vertical-align: middle;
+  max-width: 250px;
+  font-size: 0.9em;
+  font-weight: 500;
+}
+.contact-details__item i {
+  margin-right: 10px;
+}
+.contact-details__item i.loc {
+  display: inline-block;
+  vertical-align: middle;
+  width: 25px;
+  height: 37px;
+  background: url("../images/sprite.png") no-repeat;
+  background-position: -97px -8px;
+}
+.contact-details__item i.tel {
+  display: inline-block;
+  vertical-align: middle;
+  width: 25px;
+  height: 21px;
+  background: url("../images/sprite.png") no-repeat;
+  background-position: -240px -8px;
+}
+.contact-details__item i.mail {
+  display: inline-block;
+  vertical-align: middle;
+  width: 25px;
+  height: 19px;
+  background: url("../images/sprite.png") no-repeat;
+  background-position: -119px -51px;
+}
+
+.contact-section {
+  margin-bottom: 50px;
+}
+.contact-section .container {
+  max-width: 100%;
+  padding: 0;
+}
+.contact-section__item {
+  padding-top: 80px;
+}
+.contact-section__left {
+  padding-right: 5%;
+  padding-left: 12%;
+}
+.contact-section__left.curl-tail-side:before {
+  background: #fff;
+  position: absolute;
+  width: 95%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  content: "";
+}
+.contact-section__right {
+  padding-right: 11%;
+  padding-bottom: 5%;
+  padding-left: 5%;
+}
+
+.contact-details-content {
+  position: relative;
+}
+.contact-details-content h1 {
+  font-weight: 800;
+  font-size: 4em;
+  font-family: "Open Sans", sans-serif;
+}
+.contact-details-content h3 {
+  margin-bottom: 0;
+  font-size: 2.2em;
+}
+.contact-details-content p {
+  font-size: 1em;
+}
+.contact-details-content .contact-details {
+  margin-top: 65px;
+}
+
+.paper-background {
+  background: url("../images/white-paper-texture.jpg") no-repeat;
+  background-size: cover;
+}
+
+.curl-tail-bottom {
+  position: relative;
+}
+.curl-tail-bottom:after {
+  width: 100%;
+  height: 43px;
+  content: "";
+  background: url("../images/curl-tail.png") no-repeat;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  display: block;
+  z-index: 3;
+}
+
+.curl-tail-side:after {
+  width: 100px;
+  position: absolute;
+  content: "";
+  height: 100%;
+  background: url("../images/curl-tail-side.png") no-repeat;
+  top: 0;
+  right: -45px;
+}
+
 section.page {
   overflow: hidden;
 }
@@ -20488,6 +20495,10 @@ section.page--board-detail .sub-banner__wrapper:before {
 section.page--board-detail .sub-banner:before {
   left: inherit;
   right: 10%;
+}
+section.page header {
+  border-bottom: 1px solid #f4f4f4;
+  box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.1);
 }
 
 .global-featured-slider__top {
@@ -20564,10 +20575,6 @@ section.page--board-detail .sub-banner:before {
 }
 
 .page--about-us .about-section {
-  color: #f00;
-}
-
-.page--contact-us .contact-section {
   color: #f00;
 }
 
