--- a/resources/assets/scss/components/_main-page.scss
+++ b/resources/assets/scss/components/_main-page.scss
@@ -1163,3 +1163,78 @@
             right: -45px;
         }
     }
+    
+    .events-thumbnail {
+        display: block;
+        margin-bottom: 50px;
+        margin-top: 50px;
+        &__item {
+            @include flex;
+            margin-bottom: 45px;
+            border-bottom: 1px solid #ddd;
+            padding-bottom: 50px;
+            &:last-child {
+                border-bottom: 0;
+            }
+        }
+        &__date-range {
+            flex: 0 0 8%;
+            max-width: 8%;
+            text-transform: uppercase;
+            font-weight: 600;
+        }
+        &__image {
+            flex: 0 0 40%;
+            max-width: 40%;
+            min-height: 300px;
+        }
+        &__details {
+            flex: 0 0 52%;
+            max-width: 52%;
+            padding-left: 6%;
+            h5 {
+                font-size: 2em;
+                font-weight: bold;
+            }
+        }
+        &__time {
+            color: $color-secondary;
+            font-size: 1.1em;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
+        &__location {
+            margin-bottom: 15px;
+        }
+        &__paragraph {
+            border-bottom: 1px solid #ddd;
+            margin-bottom: 25px;
+            padding-bottom: 10px;
+        }
+        &__month {
+            text-transform: uppercase;
+            font-weight: bold;
+            font-size: 1.3em;
+            &:after {
+                content: '';
+                width: 19px;
+                height: 2px;
+                background: $color-gray;
+                display: block;
+                margin: 10px 0;
+            }
+        }
+        &__buttons {}
+        &__day {
+            font-size: 3.5em;
+            font-weight: 800;
+            line-height: 55px;
+        }
+        &__loadmore {
+            margin: 70px;
+            .btn {
+                border: 1px solid $color-gray;
+                color: $color-gray;
+            }
+        }
+    }
